# MyVulkanLayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install.sh  my_layer.json  setup_ndk.sh  uninstall.sh
src/: my_layer.cpp  utils.cpp  utils.h
